--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
 	<a href="http://t.cn/AiH7K9CT">联通卡</a><br>
 	<a href="http://t.cn/AiHNWMQM">移动卡</a><br>
 	<a href="http://t.cn/AiH7S1IM">电信卡</a><br>
-		<h1>我不卖卡,只提供卡的申请地址,都是官方的,只是把申请链接拿来整合一下</h1>
+		<h1>我不卖卡,只提供卡的申请地址</h1>
+		<br>
+		<h1>都是官方的,只是把申请链接拿来整合一下</h1>
+		<br>
+		<h1>实时更新</h1>
 		<br>
 		
 	</div>
