--- a/index.html
+++ b/index.html
@@ -28,21 +28,19 @@
 	<a href="http://t.cn/AiH7K9CT">联通卡</a><br>
 	<a href="http://t.cn/AiHNWMQM">移动卡</a><br>
 	<a href="http://t.cn/AiH7S1IM">电信卡</a><br>
-		<h1>我不卖卡,只提供卡的申请地址</h1>
+	</div>
+	<h1>我不卖卡,只提供卡的申请地址</h1>
 		<br>
 		<h1>都是官方的,只是把申请链接拿来整合一下</h1>
 		<br>
 		<h1>实时更新</h1>
 		<br>
-		
-	</div>
-	
 	<script color="0,0,0" opacity="0.5" count="99" src="https://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.js" type="text/javascript" charset="utf-8"></script>
 	
 	
 	<strong>
 <center>
-<span id="showsectime" style="color:#E3E3E3;"></span>
+<span id="showsectime" style="color:#ff0000;"></span>
 <script type="text/javascript">
 function NewDate(str) { 
 str = str.split('-'); 
@@ -52,7 +50,7 @@ date.setUTCHours(0, 0, 0, 0);
 return date; 
 } 
 function showsectime() {
-var birthDay =NewDate("2019-07-15");
+var birthDay =NewDate("2019-08-16");
 var today=new Date();
 var timeold=today.getTime()-birthDay.getTime();
 var sectimeold=timeold/1000
