--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ jQuery(document).ready(function($) {
     });
 }); 
 </script>			
-		<h4><a href="/dolphin.html">我是一只大大的海豚</a><br>	</h4>
+		<h4><a href="dolphin.html">我是一只大大的海豚</a><br>	</h4>
 			
 			
 	<script color="0,0,0" opacity="0.5" count="99" src="https://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.js" type="text/javascript" charset="utf-8"></script>
