--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 	</style>
 
 
-	
+	 <link rel="stylesheet" href="css/normalize.css">
+
+    <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
 </head>
 <body>
 
@@ -74,8 +76,26 @@ jQuery(document).ready(function($) {
         });
     });
 }); 
-</script>			
-		<h4><a href="dolphin.html">我是一只大大的海豚</a><br>	</h4>
+</script>	
+			
+			
+			
+			
+			
+		<div style="text-align:center;clear:both">
+<script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
+<script src="/follow.js" type="text/javascript"></script>
+</div>
+  <div id="whale"></div>
+
+  <script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
+
+  <script src="js/index.js"></script>
+			
+			
+			
+			
+			
 			
 			
 	<script color="0,0,0" opacity="0.5" count="99" src="https://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.js" type="text/javascript" charset="utf-8"></script>
