--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ setTimeout(showsectime, 1000);
   <script src="js/index.js"></script>
 			
 			
-			
+友链:<a href="http://api.imiliy.cn/anningdd/">安柠鲸鱼</a><br>(不了解误点,风险)			
 		
 </body>
 </html>
