--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@ setTimeout(showsectime, 1000);
   <script src="js/index.js"></script>
 			
 			
-友链:<a href="http://api.imiliy.cn/anningdd/">安柠鲸鱼</a><br>(不了解误点,风险)			
+友链:<a href="http://api.imiliy.cn/anningdd/">安柠鲸鱼</a><br>(不了解误点,风险)<br>
+提示:友链页面所有权归原作者所有,非本站信息,页面跳转后的一切信息与本站无关!!慎点!!
+		
 		
 </body>
 </html>
