--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@ setTimeout(showsectime, 1000);
   <script src="js/index.js"></script>
 			
 			
-友链:<a href="http://api.imiliy.cn/anningdd/">安柠鲸鱼</a><br>(不了解误点,风险)<br>
+友链:<a href="http://api.imiliy.cn/anningdd/">安柠鲸鱼</a>(不了解误点,风险)<br>
+	<a href="https://t.cn/Ai80s4yT/">福利站</a><br><br>
 提示:友链页面所有权归原作者所有,非本站信息,页面跳转后的一切信息与本站无关!!慎点!!
 		
 		
