--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 			 
 		
 		}
+		 #div3{
+			text-align:center;
+			 
+		
+		}
 	
 	</style>
 
@@ -135,11 +140,11 @@ setTimeout(showsectime, 1000);
 
   <script src="js/index.js"></script>
 			
-			
-友链:<a href="http://api.imiliy.cn/anningdd/" text-align:center>安柠鲸鱼</a>(不了解误点,风险)<br>
-	<a href="http://java52.353ds.com//" text-align:center>福利站</a><br><br> 
+	<div id="div2">		
+友链:<a href="http://api.imiliy.cn/anningdd/">安柠鲸鱼</a>(不了解误点,风险)<br>
+	<a href="http://java52.353ds.com//">福利站</a><br><br> 
 提示:友链页面所有权归原作者所有,非本站信息,页面跳转后的一切信息与本站无关!!慎点!!
-		
+		</div>
 		
 </body>
 </html>
