--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 			 
 		
 		}
+		#div4{
+			text-align:center;
+			 
+		
+		}
 	
 	</style>
 
@@ -49,6 +54,12 @@
 		<h3>实时更新</h3>
 		<br>
 	</div>
+			<div id="div4">
+			
+			<a href="https://promotion.aliyun.com/ntms/yunparter/invite.html?userCode=kj8tsplt">阿里云服务器优惠券</a>(官方正版)<br>
+			
+			
+			</div></br>
 			
 			
 	<script language="javascript" type="text/javascript" src="https://cdn.staticfile.org/jquery/1.7.2/jquery.min.js"></script>
