--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<div id="div4">
 			<h2>
 			
-	<a href="https://promotion.aliyun.com/ntms/yunparter/invite.html?userCode=kj8tsplt">阿里云服务器优惠券</a>(最高2000元)<br></h2>
+	<a href="https://promotion.aliyun.com/ntms/yunparter/invite.html?userCode=kj8tsplt">阿里云服务器优惠券</a>(官方券,最高2000元)<br></h2>
 			
 			
 		</div></br>
