--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@ div.neirong{
 
 #div2 {
 	text-align: center;
-	border: 2px solid #28FF28
+	border: 2px solid #B766AD;
 }
 
 #div3 {
 	text-align: center;
-	border: 2px solid #FF5809
+	border: 2px solid #B766AD;
 }
 </style>
 
