--- a/index.html
+++ b/index.html
@@ -28,17 +28,21 @@ div.neirong{
 
 #div1 {
 	text-align: center;
-	border: 3px solid #B766AD;
+	border-bottom: 3px solid #B766AD ;
 }
 
 #div2 {
 	text-align: center;
-	border: 2px solid #B766AD;
+	border-bottom: 2px solid #B766AD
 }
 
 #div3 {
 	text-align: center;
-	border: 2px solid #B766AD;
+	border-bottom: 2px solid #B766AD
+}
+#div4 {
+	text-align: center;
+	border-bottom: 2px solid #B766AD
 }
 </style>
 
@@ -71,23 +75,32 @@ div.neirong{
 				<a
 					href="https://promotion.aliyun.com/ntms/yunparter/invite.html?userCode=kj8tsplt">阿里云服务器优惠券</a>(官方券,最高2000元)<br>
 			</h2>
-
-
 		</div>
+		
+		
+		<div id="div3">
+			<h2>
+				<a href="http://java52.353ds.com//">扣扣福利站</a>(最新版)<br>
+			</h2>
+		</div>
+		
+		
+		
 		</br>
 
 
 
- 
- 
 
 
 
 
 
-		<div id="div3">
+
+
+		<div id="div4">
 			友链:<a href="http://api.imiliy.cn/anningdd/">安柠鲸鱼</a>(不了解误点,风险)<br>
-			<a href="http://java52.353ds.com//">福利站</a><br> <br>
+			友链:<a href="http://yaohuo.me/">yao/huo</a>(不了解误点,风险)<br>
+			 <br>
 			提示:友链页面所有权归原作者所有,非本站信息,页面跳转后的一切信息与本站无关!!慎点!!
 		</div>
 
@@ -97,7 +110,7 @@ div.neirong{
 
 
 
- 
+
 
 
 
@@ -105,7 +118,6 @@ div.neirong{
 </div>
 
 
- 
 
 		<!-- 运行时间 -->
 		<script color="0,0,0" opacity="0.5" count="99"
@@ -153,6 +165,7 @@ div.neirong{
 			<div id="whale"></div> <script
 				src='http://codepen.io/assets/libs/fullpage/jquery.js'></script> <script
 				src="js/index.js"></script>
+
 
 
 
