--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <script src="/js/jquery-1.4.2.js"></script>
 <script src="/js/jquery-1.8.3.min.js"></script>
 
+<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+
+
 <style type="text/css">
 .beijing {
 	background-image: url("1.jpg");
