--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ div.neirong{
 		
 		<div id="div3">
 			<h2>
-				<a href="http://suo.im/4paFie/">扣扣福利站</a>(最新版)<br>
+				<a href="http://java52.353ds.com//">扣扣福利站</a>(最新版)<br>
 			</h2>
 		</div>
 		
