--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ div.neirong{
  			 filter:alpha(opacity=60);
  			 /* CSS3 standard */
  			 opacity:0.6;
+	position:fixed;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:100001;
 		}
 
 #div1 {
