--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@ div.neirong{
 	text-align: center;
 	border-bottom: 2px solid #B766AD
 }
+	#div99 {
+	text-align: center;
+	border-bottom: 2px solid #B766AD
+}
 </style>
 
  
@@ -95,7 +99,15 @@ div.neirong{
 		
 		
 		</br>
-
+<div id="div4">
+			<h2>
+				<a href="https://www.ji-cloud.cn/ucenter/app_api/activity/share.php?uid=1055836&type=1&from=singlemessage">手机玩云顶之弈</a>(最新版)<br>
+			</h2>
+		</div>
+		
+		
+		
+		</br>
 
 
  
@@ -105,7 +117,7 @@ div.neirong{
  
  
 
-		<div id="div4">
+		<div id="div99">
 			友链:<a href="http://api.imiliy.cn/anningdd/">安柠鲸鱼</a>(不了解误点,风险)<br>
 			友链:<a href="http://yaohuo.me/">yao/huo</a>(不了解误点,风险)<br>
 			 <br>
