--- a/index.html
+++ b/index.html
@@ -99,10 +99,15 @@ div.neirong{
 		
 		
 		</br>
-<div id="div4">
+                <div id="div4">
 			<h2>
 				<a href="https://www.ji-cloud.cn/ucenter/app_api/activity/share.php?uid=1055836&type=1&from=singlemessage">手机玩云顶之弈</a>(最新版)<br>
-			</h2>
+			</h2>说明:就是云电脑,手机连接.免费用,手机上就能体验到网咖的电脑配置...打开手机就不用再玩王者荣耀了,,直接搞云顶之弈,岂不爽歪歪~~~
+			PC端同步手机端账号,也就是说哪怕你的电脑配置再低,只要是能看电影,就能连接云网咖开始畅玩网咖里的所有游戏,绝不卡顿...
+			这就是远程连接的魅力
+			
+			
+			
 		</div>
 		
 		
