--- a/index.html
+++ b/index.html
@@ -62,6 +62,21 @@ div.neirong{
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/style.css" media="screen"
 	type="text/css" />
+	
+	
+	
+	<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?2fd5bac6ae2c53345284a325e277d839";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+	
+	
+	
 </head>
 <body>
 	<div class="beijing">
